style.css
:root {
    --theme-primary: #0f1010;
    --theme-secondary: #eaeaea;
    --theme-tertiary: #ffffff;

    --theme-accent-blue: #00c0ff;
    --theme-accent-yellow: #ffcd00;
    --theme-accent-magenta: #ff00f4;

    --cubesat-red: #ec1c24;
    --cubesat-blue: #000058;



    --theme-purple: #7474a4;
    --header-height: 50px;
    --main-margin: 1.5in;
    --theme-aspect-ratio: 16 / 9;
    --theme-time: 0.5s;
    --body-color: var(--theme-primary);
}

* {
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    text-decoration: none;
    transition: var(--theme-time);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--theme-tertiary);
}

p,
span,
small {
    color: var(--theme-secondary);
}

button:hover {
    cursor: pointer;
}

.glass {
    border: 1px solid var(--theme-secondary);
    background-color: var(--theme-secondary);
    background: linear-gradient(to right bottom, #c0c0c0c0, #c0c0c040);
    backdrop-filter: blur(8px);
    border-radius: 10px;
}

.button {
    padding: 10px 20px;
}

.button:hover {
    background-color: var(--theme-secondary);
    color: black !important;
    mix-blend-mode: screen;
    cursor: pointer;
    text-decoration: none;
}

.panel {
    padding: 40px;
}

html {
    color-scheme: dark;
    scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', sans-serif;
    background-color: var(--body-color);
}

header {
    position: fixed;
    width: 100%;
    height: var(--header-height);
    z-index: 99;
}

header::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(to right, var(--theme-purple), var(--cubesat-blue));
    /* background: linear-gradient(to right, var(--theme-accent-blue), var(--theme-accent-magenta)); */
    opacity: calc(var(--scroll) / 500);
    z-index: -1;
}

header div#header-wrapper {
    height: 100%;
    display: flex;
    align-items: center;
}

header div#header-wrapper>div.header-padding {
    height: 100%;
    width: var(--main-margin);
}

header a#logo {
    display: block;
    transition: var(--theme-time);
    /* TODO: Make the width dynamic */
    width: calc(850 / 850 * var(--header-height));
    height: inherit;
    background: url("assets/icons/favicon.ico") no-repeat center center / cover;
}

header div#header-wrapper>div#title-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: calc(100% - 2 * var(--main-margin));
}

header nav {
    display: flex;
    justify-content: space-evenly;
    gap: 1em;
    align-items: center;
}

header nav>a {
    color: var(--theme-tertiary);
    font-size: 1.25em;
    box-sizing: border-box;
    /* TODO: Make the padding take up all of the cell */
    padding: 0.1em 0.75em !important;
    transition: var(--theme-time);
}

header nav>a.active {
    background-color: cornflowerblue;
    color: white !important;
   
}

/* header #light-switch-wrapper {
    position: relative;
    width: 3em;
    height: 1.5em;
    margin: 0;
}

header #light-switch-wrapper>input#light-switch {
    opacity: 0;
    width: 0;
    height: 0;
}

header #light-switch-wrapper>#slider {
    outline: 3px solid var(--theme-white);
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    transition: var(--theme-time);
    border-radius: 0.75em;
}

header #light-switch-wrapper>#slider:before {
    position: absolute;
    content: "";
    height: 1em;
    width: 1em;
    left: 0.25em;
    top: 0.25em;
    background: url("assets/icons/Moon.svg") no-repeat center center / cover;
    transition: var(--theme-time);
    border-radius: 50%;
}

header #light-switch-wrapper>input#light-switch:checked+#slider:before {
    transform: translateX(1.5em);
} */

main,
main .full-width {
    display: grid !important;
    grid-template-columns: [full-width-start] var(--main-margin) [content-start] 1fr [content-end] var(--main-margin) [full-width-end];
}

main>:not(.full-width),
main .full-width>*:not(.full-width) {
    grid-column: content;
}

main .full-width {
    grid-column: full-width;
}

main section p {
    text-align: justify;
    text-justify: inter-word;
}

main section#hero {
    display: grid;
    align-items: center;
    background: linear-gradient(#00000080, #00000080), url("assets/images/Hero.jpg") no-repeat fixed center / cover;
    height: 100svh;
}

main section#hero div#hero-text-wrapper {
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: 1em;
}

main section#hero a#join {
    width: fit-content;
    /* padding: 0 0.5em; */
    color: var(--theme-tertiary);
    font-size: 1.25rem;
    transition: var(--theme-time);
    text-decoration: none;
}

main section#faq {
    display: flex;
    flex-direction: column;
}

/* TODO: Use CSS classes to affect the SVG */
/* main section#faq div.two-wrapper { */
/* background: url('assets/backgrounds/BG1.png') no-repeat fixed center / cover; */
/* } */

main section#faq div.two {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

main section#faq div.two>* {
    width: 45%;
}

main section#bulletin {
    display: grid;
    place-items: center;
}

main section#bulletin div#slideshow {
    aspect-ratio: 16 / 9;
    width: 80%;
}

/* main section #social-media-gallery {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3em;
} */

footer {
    padding-top: 1em;
    border-top: 1px solid var(--theme-secondary);
    text-align: center;
    margin: 0 var(--main-margin);
    width: calc(100% - 2 * var(--main-margin));
}

footer>.footer-pair {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

footer a {
    display: block;
    width: 50px;
    height: 50px;
}

footer a:hover {
    text-decoration: none;
}

footer img {
    width: 50px;
    height: 50px;
}

footer a#insta-icon {
    background: url("assets/icons/Instagram.svg") no-repeat center center / cover;
}

footer a#github-icon {
    background: url("assets/icons/Github.svg") no-repeat center center / cover;
}

footer a#school-icon {
    background: url("assets/icons/School.svg") no-repeat center center / cover;
}

footer a#mail-icon {
    background: url("assets/icons/Mail.svg") no-repeat center center / cover;
}

#scroll-button {
    display: none;
    position: fixed;
    bottom: 3em;
    right: calc((var(--main-margin) - 3em) * 0.5);
    z-index: 99;
    width: 3em;
    height: 3em;
    border-radius: 50%;
    outline: none;
    border: none;
    background: url("assets/icons/Rocket.svg") no-repeat center center / cover;
}

